# blackwall-llm-shield-python

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MIGRATING.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
examples/python-fastapi/: .env.example  README.md  dashboard_model.py  main.py  requirements.txt  streamlit_app.py
src/blackwall_llm_shield/: __init__.py  core.py  enterprise_policy.json  integrations.py  lite.py  providers.py  red_team_prompts.json  scorecard.py  semantic.py  sidecar.py  ui.py
tests/: test_core.py
wiki/: Blackwall-vs-OpenAI-Moderation.md  Running-Examples.md
