[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpdeva-blackwall-llm-shield-python"
version = "0.1.6"
description = "Open-source Python enterprise LLM protection toolkit for Python services"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Vish", email = "hello@vish.au" }
]
keywords = ["llm", "security", "prompt-injection", "pii", "enterprise"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/vpdeva/blackwall-llm-shield-python"
Repository = "https://github.com/vpdeva/blackwall-llm-shield-python"
Issues = "https://github.com/vpdeva/blackwall-llm-shield-python/issues"
Documentation = "https://vish.au"
Funding = "https://vish.au"

[project.optional-dependencies]
integrations = ["fastapi>=0.115.0", "flask>=3.0.0", "langchain-core>=0.3.0"]
semantic = ["fasttext-wheel>=0.9.2"]
ui = ["streamlit>=1.39.0"]

[project.scripts]
blackwall-shield-ui = "blackwall_llm_shield.ui:main"
blackwall-shield-sidecar = "blackwall_llm_shield.sidecar:main"
blackwall-scorecard = "blackwall_llm_shield.scorecard:main"

[tool.unittest]

[tool.release-please]

[tool.release-please.release-type]
default = "python"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blackwall_llm_shield = ["*.json"]
