[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpdeva-blackwall-llm-shield-python"
version = "0.6.5"
description = "Security middleware for Python LLM apps and services. Blocks prompt injection, masks PII, inspects outputs, and gates agent tools."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Vish", email = "hello@vish.au" }
]
keywords = [
  "llm", "llm-security", "llm-guardrails", "prompt-injection",
  "jailbreak-detection", "ai-security", "pii-masking", "rag-security",
  "owasp-llm", "langchain", "llamaindex", "fastapi", "flask",
  "enterprise", "ai-safety", "ai-audit", "agentic-ai",
  "output-firewall", "retrieval-sanitizer", "streaming-firewall"
]
classifiers = [
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/vpdeva/blackwall-llm-shield-python"
Repository = "https://github.com/vpdeva/blackwall-llm-shield-python"
Issues = "https://github.com/vpdeva/blackwall-llm-shield-python/issues"
Documentation = "https://vish.au"
Funding = "https://vish.au"

[project.optional-dependencies]
integrations = ["fastapi>=0.115.0", "flask>=3.0.0", "langchain-core>=0.3.0"]
semantic = ["fasttext-wheel>=0.9.2"]
ui = ["streamlit>=1.39.0"]

[project.scripts]
blackwall-shield-ui = "blackwall_llm_shield.ui:main"
blackwall-shield-sidecar = "blackwall_llm_shield.sidecar:main"
blackwall-scorecard = "blackwall_llm_shield.scorecard:main"

[tool.unittest]

[tool.release-please]

[tool.release-please.release-type]
default = "python"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blackwall_llm_shield = ["*.json"]
